記述漏れの修正

--- a/config/database.yml
+++ b/config/database.yml
@@ -47,6 +47,6 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
-produciton:
+production:
   <<: *default
   database: pokemon_calc
